--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="https://kit.fontawesome.com/e5b0ba7bfa.js"></script>
 </head>
 <body>
-    <header class="wrapper clearfix">
+    <header class="wrapper3 clearfix">
+        <div class="hamburger-menu"><i class="fas fa-bars fa-2x"></i></div>
+        
         <nav>
             <ul class="clearfix">
                 <a href="#"><li>Home</li></a>
@@ -83,13 +85,18 @@
 
     <section class="thegram wrapper2">
         <h2>The Gram</h2>
-        <img src="./image-2@2x.png" alt="hand lifts a shoe">
-        <img src="./image-3@2x.png" alt="looking down at shoes on feet">
-        <img src="./image-4@2x.png" alt="hand lifts a different shoe">
+        <div class="images-parent">
+            <div class="images">
+            <img src="./image-2@2x.png" alt="hand lifts a shoe"></div>
+            <div class="images">
+            <img src="./image-3@2x.png" alt="looking down at shoes on feet"></div>
+            <div class="images presto">
+            <img src="./image-4@2x.png" alt="hand lifts a different shoe"></div>
+        </div>
     </section>
 
     <footer>
-        <section class="bottom wrapper">
+        <section class="bottom wrapper clearfix">
         
         <div class="box-color">    
         <nav>
